# GrowthRep

./: .replit  CURRENT_STATUS_OF_THE_APP.md  NEW_OBJECTIVES.md  agent_notes  package.json  pyproject.toml
backend/: requirements.txt  server.py
frontend/: craco.config.js  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AmbientSound.jsx  AtmosphericEffects.jsx  CelebrationModal.jsx  FloatingActionMenu.jsx  Layout.jsx  LevelSystem.jsx  LoadingState.jsx  MotivationalOverlay.jsx  PhilosophyIcon.jsx  StatsVisualization.jsx  ThemeProvider.jsx  WeeklyChallenges.jsx  XPToast.jsx
frontend/src/components/ui/: card.jsx  slider.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AICoach.jsx  Analytics.jsx  AuthPage.jsx  BurningDesire.jsx  CinematicIntro.jsx  Dashboard.jsx  Exercises.jsx  Goals.jsx  Goals_OLD.jsx  HabitStacking.jsx  Habits.jsx  IdentityEvolution.jsx  InspirationFeed.jsx  Journal.jsx  JourneyMap.jsx  LegacyMode.jsx  MentorLetters.jsx  MorningAlgorithm.jsx  ObstacleTransformer.jsx  Onboarding.jsx  PhilosophyPage.jsx  PremeditatioPractice.jsx  RitualMode.jsx  ThemeSettings.jsx  TransformationTimeline.jsx  VisionBoard.jsx  WisdomLibrary.jsx
